assets/css/main.css
/* ... */
div.timer_box p{ margin-top: 0px;}
#layer{
   background-color: rgba(0, 0, 0, .2);
   left: 0; top: 0;
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: 1;
}
#slider{
   width: 100%;
   position: fixed;
   background-color: #2c3e50;
   top: 0;
   left: 0;
   z-index: 0;
   padding:0;
}

.mt {
margin-top: 30px;
}
div.timer_box>h1 {
    color: rgba(155, 155, 155, .7);
}

.centered {
text-align: center;
}
/******************************************************************************************************************************
RESPONSIVE
*******************************************************************************************************************************/
@media only screen and (max-width: 520px) {
   div.timer_box{ margin: 0 12px 12px 0;}
   .tp-bullets{display: none;}
   #header .container{padding: 20px 0px 20px 0}
   #header-button{ display: none;}
   #appendedInputButtons{
       border-radius: 20px;
       margin-bottom: 25px;
   }
   #slider{display: none;}
   .btn-subscribe{border-radius: 20px;}
   #contact-informations{margin-top: 24px;}
   body {
    background-color: #2c3e50;
   }
}
@media only screen and (max-width: 740px) {
   div.timer_box{
       width: 100px;
       padding: 16px 0 0 0;
       margin: 35px 12px;
   }
   #layer{display: none;}
   div.timer_box h1{ font-size: 28px;}
   h1{ font-size: 36px;}
}
/*************************************/
.clr-green {
    color: #16a085;
    font-weight: bold;
}

.social-linkedin:hover {
    color: #4875B4;
}
button.modal-up-2em {
    position: relative;
    bottom: 2.5em;
}
.mg-top-none {
    margin-top: 0;
}
.mg-bottom-none {
    margin-bottom: 0;
}
p {
    line-height: 28px;
    margin-bottom: 25px;
    font-size: 18px;
}
.btn-group.mg-btm-1em {
    margin-bottom: 1em;
}
.ss-form-entry {
    margin-bottom: 1em;
}
ul.ss-choices {
    padding-left: 0;
}
.ss-form-entry.s-form-text {
    border-bottom: 1px dotted #fff;
    width: 100%;
    min-width: 200px;
    max-width: 900px;
    display: -webkit-flex;
    display: flex;
}
.centered {
    text-align: center;
}
.goright {
    text-align: right;
}
.mt {
    padding-top: 25px;
}
.white-text {
    color: #fff;
}
.main-img {
    width: 32em;
    margin-top: 12em;
}
.marg-left-6 {
    margin-left: 6em;
}
.marg-left-1 {
    margin-left: 1em;
}
.tile h2 {
    position: relative;
    bottom: 9em;
    left: .5em;
}
img.team_img_size.pull-left.col-lg-12 {
    min-height: 1px;
}

/* =========================================================================
                            Team Profiles
   =======================================================================*/

.blueimp-gallery>.slides>.slide>.slide-content {
    margin: 5em 0 0 5em;
}

.well {
    padding: 8px 19px 0 19px;
}
input.btn {
    border-radius: 3px;
}
a {
    color: #16a085;
    word-wrap: break-word;
    -webkit-transition: color .1s ease-in, background .1s ease-in;
    -moz-transition: color .1s ease-in, background .1s ease-in;
    -ms-transition: color .1s ease-in, background .1s ease-in;
    -o-transition: color .1s ease-in, background .1s ease-in;
    transition: color .1s ease-in, background .1s ease-in;
}
a:hover, a:focus {
    color: #7b7b7b;
    text-decoration: none;
    outline: 0;
}
a:before, a:after {
    -webkit-transition: color .1s ease-in, background .1s ease-in;
    -moz-transition: color .1s ease-in, background .1s ease-in;
    -ms-transition: color .1s ease-in, background .1s ease-in;
    -o-transition: color .1s ease-in, background .1s ease-in;
    transition: color .1s ease-in, background .1s ease-in;
}
.auth-box2 h3 {
    color: #fff;
}
.auth-box2 p {
    font-weight: 400;
}
hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}
.btn {
    border-radius: 0;
}
.btn-green {
    color: #fff;
    background-color: #1abc9c;
    border-color: #1abc9c;
    font-weight: 300;
}
.btn-green:hover, .btn-green:focus, .btn-green:active, .btn-green.active, .open .dropdown-toggle.btn-green {
    color: #fff;
    background-color: #16a085;
    border-color: #16a085;
    font-weight: 300;
}
.tm {
    font-size: 14px;
    line-height: 20px;
}
.menu {
    position: fixed;
    right: -200px;
    width: 260px;
    height: 100%;
    top: 0;
    z-index: 10;
    text-align: left;
}
.menu.menu-open {
    right: 0;
}
.menu-wrap {
    position: absolute;
    top: 0;
    left: 60px;
    background: #1a1a1a;
    width: 200px;
    height: 100%}
.menu h1.logo a {
    font-family: Raleway, Helvetica, Arial, sans-serif;
    font-size: 16px;
    font-weight: 800;
    letter-spacing: .15em;
    line-height: 40px;
    text-transform: uppercase;
    color: #fff;
    margin-top: 20px;
}
.menu h1.logo a:hover {
    color: #1abc9c;
}
.menu img.logo {
    margin: 20px 0;
    max-width: 160px;
}
.menu a {
    margin-left: 20px;
    color: gray;
    display: block;
    font-size: 12px;
    font-weight: 700;
    line-height: 40px;
    letter-spacing: .1em;
    text-transform: uppercase;
}
.menu a:hover {
    color: #fff;
}
.menu a:active {
    color: #fff;
}
.menu a>i {
    float: left;
    display: inline-block;
    vertical-align: middle;
    text-align: left;
    width: 25px;
    font-size: 14px;
    line-height: 40px;
    margin: 25px 2px;
}
.menu-close {
    cursor: pointer;
    display: block;
    position: absolute;
    font-size: 14px;
    color: gray;
    width: 40px;
    height: 40px;
    line-height: 40px;
    top: 20px;
    right: 5px;
    -webkit-transition: all .1s ease-in-out;
    -moz-transition: all .1s ease-in-out;
    -ms-transition: all .1s ease-in-out;
    -o-transition: all .1s ease-in-out;
    transition: all .1s ease-in-out;
}
.menu-close:hover {
    color: #fff;
    -webkit-transition: all .1s ease-in-out;
    -moz-transition: all .1s ease-in-out;
    -ms-transition: all .1s ease-in-out;
    -o-transition: all .1s ease-in-out;
    transition: all .1s ease-in-out;
}
/* ... */

